# UniFi

./: .gitignore  .gitmodules  Cargo.toml  README.md  package.json
UniFi/crates/unifi_avs_interface/: Cargo.toml
UniFi/crates/unifi_avs_interface/src/: lib.rs
apps/execution/: Cargo.toml  README.md
apps/execution/abi/: UnifiContract.json
apps/execution/src/: db.rs  decode.rs  derive.rs  execute.rs  execution.rs  exex.rs  main.rs  testing.rs  unifi.rs
apps/sequencing/: Cargo.toml
crates/unifi_avs_interface/: Cargo.toml
crates/unifi_avs_interface/src/: lib.rs
crates/unifi_avs_interface/src/tests/: test_get_operator.rs
deployments-and-acl/: README.md
docs/: README.md
docs/contract-acl/: mainnet.md
docs/contract-deployments/: holesky.md  mainnet.md
l1-contracts/: foundry.toml  package.json  remappings.txt
l1-contracts/docs/: README.md  architcture.md  architecture.md  overview.md  registration.md  rewards.md  scripts.md  slashing.md
l1-contracts/docs/guides/: how-to-register-operator.md
l1-contracts/docs/images/: preconf-flow-sequence.mermaid
l1-contracts/script/: BaseScript.s.sol  DeployAVSManager.s.sol  DeployBatchInbox.s.sol  DeployBatchSender.s.sol  DeployEverything.s.sol  DeployTokenizedVault.s.sol  DeployUniFiAVSManager.s.sol  DeployUniFiAVSManagerWithMocks.s.sol  DeployUniFiToMainnet.s.sol  DeployUnifiToHolesky.s.sol  DeploymentStructs.sol  GenerateAccessManagerCallData.sol  GenerateProposerProof.s.sol  SetupAccess.s.sol  UniFiAVSScripts.sol  UpgradeMainnetUniFiAVS.s.sol
l1-contracts/script/utils/: ContractAddressManager.s.sol  DeploymentScript.s.sol
l1-contracts/shell-scripts/: getBlockHeader.sh
l1-contracts/shell-scripts/register/: decryptKeystore.js  register.sh
l1-contracts/src/: BeaconChainHelperLib.sol  Errors.sol  Operator.sol  PufferBatchInbox.sol  PufferBatchInboxStorage.sol  PufferBatchSender.sol  PufferBatchSenderStorage.sol  RestakingOperator.sol  TokenizedVault.sol  UniFiAVSManager.sol  UniFiAVSManagerStorage.sol  Unifi.sol
l1-contracts/src/interfaces/: IOperator.sol  IPufferBatchInbox.sol  IPufferBatchSender.sol  IRestakingOperator.sol  IUniFiAVSManager.sol
l1-contracts/src/interfaces/EigenLayer/: IAVSDirectoryExtended.sol
l1-contracts/src/lib/: BLSSignatureCheckerLib.sol  BLSSingatureCheckerLib.sol  BeaconChainHelperLib.sol  MerkleUtils.sol
l1-contracts/src/storage/: UniFiAVSManagerStorage.sol
l1-contracts/src/structs/: OperatorData.sol  PreConferInfo.sol  ValidatorData.sol  ValidatorDataExtended.sol  ValidatorInfo.sol  ValidatorRegistrationParams.sol
l1-contracts/test/: UniFiAVSManager.t.sol  UniFiAVSManagerTest.sol
l1-contracts/test/fixtures/: BeaconProofs.sol
l1-contracts/test/forks/: UniFiAVSManagerForkTest.sol
l1-contracts/test/helpers/: UnitTestHelper.sol
l1-contracts/test/mocks/: MockAVSDirectory.sol  MockDelegationManager.sol  MockEigenPod.sol  MockEigenPodManager.sol
media/: unifi-metadata.json
subgraphs/: .gitignore  README.md  docker-compose.yml  package.json  schema.graphql  subgraph.yaml  tsconfig.json
subgraphs/abis/: DelegationManager.json  UniFiAVSManager.json
subgraphs/data/ipfs/: config
subgraphs/data/ipfs/blocks/: diskUsage.cache
subgraphs/data/ipfs/blocks/3W/: CIQMEYXKOJAQQDIOD4DWRXSWUMSME6XLPKIRAK3CTWC5X2LDAGNG3WI.data
subgraphs/data/ipfs/blocks/42/: CIQM67YH5Q6TMZC4P2IYDYK4GTWA6IR4BCUK3522WIVEBSIWA6GN42Y.data
subgraphs/data/ipfs/blocks/5O/: CIQKI5WFREDAXM7JZ2XVZVWHUE6YLTLDNFQQFX3XA5F6WHQIFQGC5OA.data
subgraphs/data/ipfs/blocks/BR/: CIQJYAJV656VDEXPYEFPSRYS6FVP6BEXYYOQAWBHDSVRIV3EUXYABRA.data
subgraphs/data/ipfs/blocks/DK/: CIQODLJXWGMYMX6TIXOQVKE5GWNKST5JXF5JJRMHS6Z7PWPCD6DLDKY.data
subgraphs/data/ipfs/blocks/HO/: CIQOPZQP2MQEEVV74MG3BEWK5PKR7HQYELHFZQQMBGABEDDV65HRHOI.data
subgraphs/data/ipfs/blocks/IC/: CIQNGSLTTGDKTZA7TLPKZXLXHECFINQHN4VPJS54M2UEV5BN4OXKICQ.data
subgraphs/data/ipfs/blocks/IQ/: CIQIIBZGY52HIGVLRRF53MRBJ5FZN6HT2JZS5GWCTFOFZEM3WNJ5IQQ.data
subgraphs/data/ipfs/blocks/JX/: CIQLZNSCKU6THEHEY5SNA2VCNLOXSXDFJI3SUAYALBKV6YMG7275JXA.data
subgraphs/data/ipfs/blocks/K4/: CIQEUH76IKOVD6J2HZVOLN5RHGYSN2J4CSDXCCEZSNPOZDZZ7NG2K4Y.data
subgraphs/data/ipfs/blocks/M2/: CIQAQ7NPUMUQW5KAC7JNEELQZ4Q4FZMSFKRULHY2GVRATQZKAS7UM2A.data
subgraphs/data/ipfs/blocks/MF/: CIQHC5ZIGGHH23OZ42J7OXSIWS47GE5DGWD6U7T3SVIAXU5HI76PMFY.data
subgraphs/data/ipfs/blocks/NZ/: CIQCA2X7M5DRSFRCEGOG7FLOBI5VXR4QZAKXKRSNGQMNFFEGM6DXNZI.data
subgraphs/data/ipfs/blocks/OM/: CIQJAEV2WPYUKPYMK6IYQJ5HJ5VZD6FPES6GDNKIAHCSW5IWDYZCOMA.data
subgraphs/data/ipfs/blocks/QG/: CIQCKTYAIBIOJ43SQQZNNEXPLDXYAHCG4QJLQC26MG4DXG2SR7G3QGI.data
subgraphs/data/ipfs/blocks/S4/: CIQHVPJPSPMPH3ZRRUDADCVYHBHJXKD3I2BBS5YGLKWIBCGAN5BBS4Q.data
subgraphs/data/ipfs/blocks/UT/: CIQBDYQACFE6JZ774GWFYBIQHJDKXNZXDGCCAYVZFMXOIASLJQKSUTQ.data  CIQDKQWBPY7GLFNH2ML7DO42ZAV7GHX2RNXDKYPPL4TRA4IZBBW6UTA.data
subgraphs/data/ipfs/blocks/WN/: CIQFWCEX3R542TCPU475UIUWPOFT4YXRS2D5JYSP2RCCRHJTUCIYWNQ.data
subgraphs/data/ipfs/blocks/Y5/: CIQLQIHMRIJCVZHPCZOHMW6S25PKT44I4WO2MHA5SE6JCENX3MLBY5Y.data
subgraphs/data/ipfs/datastore/: 000036.ldb  000037.ldb  000040.ldb  000043.ldb  LOG  MANIFEST-000045
subgraphs/data/postgres/base/1/: 2619
subgraphs/data/postgres/base/13780/: 13603  pg_internal.init
subgraphs/data/postgres/base/16384/: 1247  1249  1249_fsm  1249_vm  1255  1259  1259_fsm  1259_vm  16392  16396  16398  16401  16455  16461  16637  17455  17456  17462  17464  17466  17467  17468  17469  17470  17471  17472  17478  17480  17482  17483  17484  17485  17487  17487_vm  17510  17524  17731  17733  17734  17740  (+205 more)
subgraphs/data/postgres/global/: 1260  pg_control  pg_internal.init
subgraphs/data/postgres/pg_stat_tmp/: db_0.stat  db_13780.stat  db_16384.stat  global.stat  pgss_query_texts.stat
subgraphs/src/: tvl-tracker.ts
subgraphs/tests/: tvl-tracker.test.ts
