[workspace]
members = ["apps/*"]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2021"
rust-version = "1.76"
authors = ["Puffer Labs"]
homepage = "https://github.com/PufferFinance/UniFi"
repository = "https://github.com/PufferFinance/UniFi"
license = "AGPL-3.0"

[workspace.dependencies]
# reth
reth = { git = "https://github.com/paradigmxyz/reth" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth" }
reth-discv5 = { git = "https://github.com/paradigmxyz/reth" }
reth-execution-errors = { git = "https://github.com/paradigmxyz/reth" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth" }
reth-exex = { git = "https://github.com/paradigmxyz/reth", features = ["serde"] }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth" }
reth-provider = { git = "https://github.com/paradigmxyz/reth" }
reth-revm = { git = "https://github.com/paradigmxyz/reth" }
reth-evm = { git = "https://github.com/paradigmxyz/reth" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth" }
reth-db-common = { git = "https://github.com/paradigmxyz/reth" }
reth-config = { git = "https://github.com/paradigmxyz/reth" }

# alloy
alloy-primitives = { version = "0.7", features = ["serde", "tiny-keccak"] }
alloy-sol-types = { version = "0.7", features = ["json"] }
alloy-rlp = { version = "0.3.4" }
alloy-contract = { version = "0.1", default-features = false }
alloy-consensus = { version = "0.1", default-features = false, features = ["k256", "kzg"] }
alloy-eips = { version = "0.1.3", default-features = false }
alloy-json-rpc = { version = "0.1", default-features = false }
alloy-network = { version = "0.1", default-features = false }
alloy-node-bindings = { version = "0.1", default-features = false }
alloy-provider = { version = "0.1", default-features = false, features = ["ws"] }
alloy-rpc-types = { version = "0.1", default-features = false }
alloy-rpc-types-eth = { version = "0.1", default-features = false }
alloy-rpc-client = { version = "0.1", default-features = false }
alloy-signer = { version = "0.1", default-features = false }
alloy-signer-local = { version = "0.1", default-features = false }
alloy-signer-aws = { version = "0.1", default-features = false }
alloy-transport = { version = "0.1", default-features = false }
alloy-transport-http = { version = "0.1", default-features = false }

# async
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"

# misc
hex = { package = "const-hex", version = "1.10", default-features = false, features = ["alloc"] }
serde = { version = "1.0.197", features = ["derive"] }
tracing = "0.1.40"
eyre = "0.6"

# testing
reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth" }
reth-testing-utils = { git = "https://github.com/paradigmxyz/reth" }