[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.79"
authors = ["Puffer Labs"]
homepage = "https://github.com/PufferFinance/UniFi"
repository = "https://github.com/PufferFinance/UniFi"
license = "AGPL-3.0"

[workspace.dependencies]
alloy = { version = "0.2", features = ["full"] }
alloy-node-bindings = "0.2.1"
tokio = { version = "1.0", features = ["full"] }

# misc
hex = { package = "const-hex", version = "1.10", default-features = false, features = ["alloc"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1"
tracing = "0.1.40"
eyre = "0.6"
thiserror = "1.0"
