[package]
name = "execution"
version = "0.1.0"
edition = "2021"

[dependencies]
# reth
reth.workspace = true
reth-exex.workspace = true
reth-node-api.workspace = true
reth-node-ethereum.workspace = true
reth-tracing.workspace = true
reth-execution-types.workspace = true
reth-consensus.workspace = true
reth-evm.workspace = true
reth-revm.workspace = true
reth-db-common.workspace = true
reth-provider.workspace = true
reth-config.workspace = true

# alloy
alloy-sol-types = { workspace = true }
alloy-provider = { workspace = true }

# async
futures.workspace = true
tokio.workspace = true

# misc
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
eyre.workspace = true
rusqlite.workspace = true

[dev-dependencies]
reth-exex-test-utils.workspace = true
reth-testing-utils.workspace = true
reth-chainspec.workspace = true
rand = "0.8"

tokio.workspace = true
